# Semafaro

./: CMakeLists.txt  Pico_Sdk_import.Cmake  README.md  Semaforo.c  diagram.json  pi-pico-community-core.ino  wokwi.toml
